--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -197,9 +197,7 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
-  border-color: #888;
-  outline: 0; }
+ }
 .button.button-primary,
 button.button-primary,
 input[type="submit"].button-primary,
